atividade IV - commit 02

--- a/Atividade IV - HTML e CSS/index.html
+++ b/Atividade IV - HTML e CSS/index.html
@@ -6,74 +6,59 @@
         <link rel="stylesheet" href="style.css">
     </head>
     <body>
-        <header class="cabecalho">
+        <header>
             <img src="photo.me.jpg" alt="Foto" id="foto-ca"> <h5>Lucas Brembati Weizenmann</h5>
         </header>
-            <div class="layout">
-                <div class="caixa">
-                    caixa 1
-                </div>
-                <div class="caixa">
-                    caixa 2
-                </div>
-                <div class="caixa">
-                    caixa 3
-                </div>
-                <div class="caixa">
-                    caixa 4
-                </div>
-                <div class="caixa">
-                    caixa 5
-                </div>
-                <div class="caixa">
-                    caixa 5
-                </div>
-                <div class="caixa">
-                    caixa 5
-                </div>
-                <div class="caixa">
-                    caixa 5
-                </div>
-                <div class="caixa">
-                    caixa 5
-                </div>
-                <div class="caixa">
-                    caixa 5
-                    <h1>a</h1>
-                    <h1>a</h1>
-                    <h1>a</h1>
-                    <h1>a</h1>
-                    <h1>a</h1>
-                    <h1>a</h1>
-                    <h1>a</h1>
-                    <h1>a</h1>
-                    <h1>a</h1>
-                    <h1>a</h1>
-                    <h1>a</h1>
-                    <h1>a</h1>
-                    <h1>a</h1>
-                    <h1>a</h1>
-                    <h1>a</h1>
-                    <h1>a</h1>
-                    <h1>a</h1>
-                    <h1>a</h1>
-                    <h1>a</h1>
-                    <h1>a</h1>
-                    <h1>a</h1>
-                    <h1>a</h1>
-                    <h1>a</h1>
-                    <h1>a</h1>
-                    <h1>a</h1>
-                    <h1>a</h1>
-                    <h1>a</h1>
-                    <h1>a</h1>
-                    <h1>a</h1>
-                    <h1>a</h1>
-                    <h1>a</h1>
-                    <h1>a</h1>
-                    
-                </div>
-
+        <div class="layout-1c">
+            <div class="caixa" style="display: flex;">
+                <img src="photo34.jpg" alt="Foto", id="foto-34">
+                Me chamo Lucas Brembati Weizenmann e lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum 
             </div>
+        </div>
+        <div class="layout-2c">
+            <div class="caixa">
+                <h3>Contato e rede sociais</h3>
+                <div><img src="github-image.png" alt="Foto" class="icon"> <a href="https://github.com/LucasBW-06">LucasBW-06</a></div>
+                <div><img src="email-image.png" alt="Foto" class="icon"> lucas8bitbw@gmail.com</div>
+                <div><img src="phone-image.png" alt="Foto" class="icon"> (66)99607-0236</div>
+            </div>
+            <div class="caixa">
+                <h3>Formação Acadêmica</h3>
+                <ul>
+                    <li>Cursando 3º semestre de Engenharia da Computação</li>
+                    <li>Aprendiz de Socrates</li>
+                    <li>Formado em UAUAUAUAUAUAU</li>
+                    <li>sla</li>
+                </ul>
+            </div>
+            <div class="caixa">
+                <h3>Experiência Profissional</h3>
+                <ul>
+                    <li>Ensinei Einstein</li>
+                    <li>354634616 anos de experiência com a NASA</li>
+                    <li>Descobri o Brasil</li>
+                </ul>
+            </div>
+            <div class="caixa">
+                <h3>Skills</h3>
+                <ul>
+                    <li>Programação com a mente</li>
+                    <li>Hackear o chatgepeto</li>
+                    <li>aaaaaaaaaa</li>
+                </ul>
+            </div>
+            <div class="caixa">
+                <h3>Projetos</h3>
+                <ul>
+                    <li><a href="https://github.com/LucasBW-06/Super-Tic-Tac-Toe">Super Tic Tac Toe</a></li>
+                    <li><a href="https://github.com/LucasBW-06/Word-Ordering">Word Ordering</a></li>
+                    <li>ChatGPT 3000000000</li>
+                    <li>Sistema solar</li>
+                </ul>
+            </div>
+        </div>
     </body>
+    <footer>
+        <h4>Contém ironias</h4>
+    </footer>
 </html>
