atividade IV - commit 04

--- a/Atividade IV - HTML e CSS/index.html
+++ b/Atividade IV - HTML e CSS/index.html
@@ -18,9 +18,9 @@
         <div class="layout-2c">
             <div class="caixa">
                 <h3>Contato e rede sociais</h3>
-                <div><img src="github-image.png" alt="Foto" class="icon"> <a href="https://github.com/LucasBW-06">LucasBW-06</a></div>
-                <div><img src="email-image.png" alt="Foto" class="icon"> lucas8bitbw@gmail.com</div>
-                <div><img src="phone-image.png" alt="Foto" class="icon"> (66)99607-0236</div>
+                <div><img src="github-icon.png" alt="Foto" class="icon"> <a href="https://github.com/LucasBW-06">LucasBW-06</a></div>
+                <div><img src="email-icon.png" alt="Foto" class="icon"> lucas8bitbw@gmail.com</div>
+                <div><img src="phone-icon.png" alt="Foto" class="icon"> (66)99607-0236</div>
             </div>
             <div class="caixa">
                 <h3>Formação Acadêmica</h3>
